# monadic-error

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-app.yml
monadic_error/: __init__.py  attempt.py  either.py  option.py  utils.py
tests/: test_attempt.py  test_option.py  test_utils.py
