[tool.poetry]
name = "monadic-error"
version = "2.0.1"
description = "Monads used for handling Errors. Contains Attempt and Option."
authors = ["Ian Kollipara <ian.kollipara@cune.org>"]
readme = "README.md"
packages = [{ include = "monadic_error" }]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
