[tool.poetry]
name = "monadic-error"
version = "3.0.2"
description = "Monads used for handling Errors. Contains Attempt and Option."
authors = ["Ian Kollipara <ian.kollipara@cune.org>"]
readme = "README.md"
packages = [{ include = "monadic_error" }]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.13.2"
black = "^23.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
